// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariationViewer component renders on data 1`] = `
<DocumentFragment>
  <section
    class="wider-tab-content hotjar-margin"
  >
    <div />
    <button
      class="button tertiary"
      type="button"
    >
      <test-file-stub />
      Download
    </button>
    <nightingale-manager
      reflected-attributes="highlight,display-start,display-end,activefilters,filters,selectedid"
      style="display: block; line-height: 0;"
    />
    <table
      class="table"
    >
      <thead
        class=""
      >
        <tr
          class="row"
        >
          <th>
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown"
            >
              <button
                class="button tertiary"
                type="button"
              >
                ±
              </button>
            </div>
          </th>
          <th>
            Variant
            <br />
            ID(s)
          </th>
          <th>
            Position(s)
          </th>
          <th>
            Change
          </th>
          <th>
            Description
          </th>
          <th>
            Clinical
            <br />
            significance
          </th>
          <th>
            Provenance
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="row has-extra-content"
          data-id="0.02"
        >
          <td>
            <button
              aria-controls="2"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            22
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR0 N22S"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                N&gt;S
              </a>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content"
          hidden=""
          id="2"
        >
          <td />
        </tr>
        <tr
          class="row odd has-extra-content"
          data-id="0.03"
        >
          <td>
            <button
              aria-controls="3"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            39-44
          </td>
          <td>
            <span
              class="change"
            >
              NK
              <button
                aria-expanded="false"
                class="button tertiary ellipsis-reveal"
                title="Show more"
                type="button"
              >
                [...]
              </button>
              &gt;SK
              <button
                aria-expanded="false"
                class="button tertiary ellipsis-reveal"
                title="Show more"
                type="button"
              >
                [...]
              </button>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content odd"
          hidden=""
          id="3"
        >
          <td />
        </tr>
        <tr
          class="row has-extra-content"
          data-id="0.04"
        >
          <td>
            <button
              aria-controls="4"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            74
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR0 N74D"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                N&gt;D
              </a>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content"
          hidden=""
          id="4"
        >
          <td />
        </tr>
        <tr
          class="row odd has-extra-content"
          data-id="0.05"
        >
          <td>
            <button
              aria-controls="5"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            88-89
          </td>
          <td>
            <span
              class="change"
            >
              GD&gt;TN
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content odd"
          hidden=""
          id="5"
        >
          <td />
        </tr>
        <tr
          class="row has-extra-content"
          data-id="0.06"
        >
          <td>
            <button
              aria-controls="6"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            98
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR0 N98D"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                N&gt;D
              </a>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content"
          hidden=""
          id="6"
        >
          <td />
        </tr>
        <tr
          class="row odd has-extra-content"
          data-id="0.07"
        >
          <td>
            <button
              aria-controls="7"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            106
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR0 I106L"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                I&gt;L
              </a>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content odd"
          hidden=""
          id="7"
        >
          <td />
        </tr>
        <tr
          class="row has-extra-content"
          data-id="0.08"
        >
          <td>
            <button
              aria-controls="8"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            120
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR0 I120T"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                I&gt;T
              </a>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content"
          hidden=""
          id="8"
        >
          <td />
        </tr>
        <tr
          class="row odd has-extra-content"
          data-id="0.09"
        >
          <td>
            <button
              aria-controls="9"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            125
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR0 M125I"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                M&gt;I
              </a>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content odd"
          hidden=""
          id="9"
        >
          <td />
        </tr>
        <tr
          class="row has-extra-content"
          data-id="0.1"
        >
          <td>
            <button
              aria-controls="10"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            133
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR0 S133N"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                S&gt;N
              </a>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content"
          hidden=""
          id="10"
        >
          <td />
        </tr>
        <tr
          class="row odd has-extra-content"
          data-id="0.11"
        >
          <td>
            <button
              aria-controls="11"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td />
          <td>
            267
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR0 H267N"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                H&gt;N
              </a>
            </span>
          </td>
          <td>
            <div
              class="bold"
            >
              strain: Type C / C-6814 (UniProt)
            </div>
          </td>
          <td />
          <td>
            <span
              class="bold"
            >
              UniProt
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content odd"
          hidden=""
          id="11"
        >
          <td />
        </tr>
      </tbody>
    </table>
  </section>
</DocumentFragment>
`;

exports[`VariationViewer component renders on error 1`] = `
<DocumentFragment>
  <div
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="container"
    >
      <img
        alt=""
        height="400"
        src="test-file-stub"
        width="400"
      />
      <div
        class="message message--failure"
        role="status"
      >
        <div
          class="message__side-border"
        />
        <test-file-stub
          class="message--icon-align-top"
          height="1.125em"
          width="1.125em"
        />
        <div
          class="message__title"
        >
          <h4>
            This service is currently unavailable!
          </h4>
          <div>
            Please try again later
          </div>
          <small>
            We will reload this page for you in 5 seconds
          </small>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VariationViewer component renders on loading 1`] = `
<DocumentFragment>
  <div
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="loader-container"
    >
      <test-file-stub
        class="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`VariationViewer component renders on no data 1`] = `
<DocumentFragment>
  <section
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="no-data"
    >
      No variation information available for P0DPR0
    </div>
  </section>
</DocumentFragment>
`;
